# 3P_custom_synonymous

./: GO_Fish.h  README.md  data_structs.cu  data_structs.h  demography.cuh  demography.h  dominance.cuh  dominance.h  fw_sim_api.h  go_fish.cuh  go_fish.h  go_fish_data_struct.cu  go_fish_data_struct.h  go_fish_impl.cuh  go_fishes.h  inbreeding.cuh  inbreeding.h  inline_go_fish_data_struct.hpp  main.cpp  main.cu  migration.cuh  migration.h  mutation.cuh  mutation.h  preserve.cuh  rand.cuh  run.cu  run.h  run_sim.cu  run_sim.cuh  run_sim.h  sample.cuh  sample.h  selection.cuh  selection.h  sfs.cu  sfs.cuh  sfs.h  sfs_api.h  shared.cu  (+9 more)
3P/: go_fish.cuh  go_fish_data_struct.h  spectrum.h
docs/: _example1-_speed-example.html  _example2-_da_di-example.html  _example3-_compilation-example.html  _r_e_a_d_m_e_8md_source.html  annotated.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  go__fish_8cuh.html  go__fish_8cuh_source.html  go__fish__data__struct_8h.html  go__fish__data__struct_8h_source.html  go__fish__impl_8cuh_source.html  group__demography.html  group__migration.html  group__migration.js  group__selection.html  index.html  inline__go__fish__data__struct_8hpp_source.html  md__r_e_a_d_m_e.html  menudata.js  namespace_g_o___fish.html  namespace_sim___model.html  namespace_spectrum.html  namespaces.html  navtreedata.js  navtreeindex0.js  navtreeindex1.js  page1.html  pages.html  (+33 more)
project/likelihood/: .gitignore  CMakeLists.txt  Makefile  cmake command.txt  generate_SFS.py  likelihood.py  mse_gpu.cpp  mse_gpu.cu
(+50 files in other folders)
